<resources>
    <string name="app_name">HF1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_Home">Inicio</string>
    <string name="prueba_corta">Texto de prueba</string>
    <string name="prueba_larga">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="Respuesta">Escribe un mensaje</string>
    <string name="Enviar">Enviar</string>
    <string name="Usuario">Usuario</string>
    <string name="Carlos">Carlos Molina</string>

    <string name="Notificaciones">Notificaciones</string>
    <string name="Favoritos">Favoritos</string>
    <string name="MisAnuncios">Mis Anuncios</string>
    <string name="MiCuenta">Mi Cuenta</string>
    <string name="Configuracion">Configuracion</string>
    <string name="Reportar">Reportar un problema</string>
    <string name="Acerca">Acerca de</string>
    <string name="Inbox">Mensajes</string>
    <string name="Search">Buscar</string>


    <string-array name="menuoptions">
        <item>Inicio</item>
        <item>Notificaciones</item>
        <item>Favoritos</item>
        <item>Mis Anuncios</item>
        <item>Mi Cuenta</item>
        <item>Configuracion</item>
        <item>Reportar un problema</item>
        <item>Acerca de</item>
    </string-array>


    <string name="Belleza">Belleza</string>
    <string name="Cuiddor">Cuidador</string>
    <string name="Deporte">Deporte</string>
    <string name="Entretenimiento">Entretenimiento</string>
    <string name="Hogar">Hogar</string>
    <string name="Mascotas">Mascotas</string>
    <string name="Otros">Otros</string>
    <string name="Profesores">Profesores</string>
    <string name="Reparaciones">Reparaciones</string>
    <string name="Salud">Salud</string>
    <string name="Transporte">Transporte</string>


    <string name="BellezaDesc">Peluquería, manicure, tratamientos...</string>
    <string name="CuidadorDesc">Cuidador de niños, de ancianos...</string>
    <string name="DeporteDesc">Entrenamiento personal, boxeo, yoga...</string>
    <string name="EntretenimientoDesc">Animación para fiestas, guías...</string>
    <string name="HogarDesc">Limpieza, costura...</string>
    <string name="MascotasDesc">Cuidado, paseo...</string>
    <string name="OtrosDesc">Fotografía, artes gráficas, marketing...</string>
    <string name="ProfesoresDesc">Cátedras, baile, música...</string>
    <string name="ReparacionesDesc">Albañiles, carpinteros...</string>
    <string name="SaludDesc">Medicina, enfermería...</string>
    <string name="TransporteDesc">Mudanzas, paquetería...</string>
    <string name="Desc">Mobile Developer</string>
    <string name="Desc1">Niñera</string>
    <string name="Desc2">Electricista</string>
    <string name="Desc3">Profesor</string>
    <string name="Nombre">Carlos Molina</string>
    <string name="Nombre1">Claudio Abdule</string>
    <string name="Nombre2">Mark Zuckerberg</string>
    <string name="Nombre3">Miguel Sanchez</string>
    <string name="Distancia">11km</string>
    <string name="Distancia1">13km</string>
    <string name="Distancia2">41km</string>
    <string name="Distancia3">44km</string>
    <string name="Ciudad">Maracaibo - Zulia</string>
    <string name="Ciudad1">San Francisco - Zulia</string>
    <string name="Ciudad2">Cabimas - Zulia</string>
    <string name="nombre_transicion_imagen">imagen_compartida</string>


    <string name="workana">hola estoy buscando programadores para empezar este proyecto que consta en una forma de pagar mas fácil y seguro, primero tendiéramos que hacer una aplicación que funcione en dos modalidades la primera como comprador y la segunda como vendedor en la primera te da la opción de guardar tus tarjetas... </string>
    <string name="title_activity_servicio">servicio</string>
    <string name="title_activity_perfil">perfil</string>
    <string name="title_activity_comentarios">comentarios</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_mis_anuncios">MisAnuncios</string>
    <string name="title_activity_mis_servicios">MisServicios</string>
    <string name="title_activity_mi_cuenta">MiCuenta</string>
    <string name="title_activity_valoraciones">valoraciones</string>
    <string name="title_activity_mis_publicaciones">MisPublicaciones</string>
</resources>
