<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
                <item
            android:id="@+id/menu_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_Home" />
        <item
            android:id="@+id/menu_notif"
            android:icon="@drawable/notif_icon"
            android:title="@string/Notificaciones" />
        <item
            android:id="@+id/menu_fav"
            android:icon="@drawable/fav_icon"
            android:title="@string/Favoritos" />
        <item
            android:id="@+id/misAnuncios"
            android:icon="@drawable/anuncios_icon"
            android:title="@string/MisAnuncios" />
        <item
            android:id="@+id/miCuenta"
            android:icon="@drawable/myaccount_icon"
            android:title="@string/MiCuenta" />
    </group>



    <group android:checkableBehavior="single"
        android:id="@+id/group2">

        <item
            android:id="@+id/menuconfig"
            android:icon="@drawable/config_icon"
            android:title="@string/Configuracion" />
        <item
            android:id="@+id/menureport"
            android:icon="@drawable/troubleshoot_icon"
            android:title="@string/Reportar" />
        <item
            android:id="@+id/menuacercade"
            android:icon="@drawable/acercade_icon"
            android:title="@string/Acerca" />


    </group>

</menu>
