<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <LinearLayout
        android:id="@+id/layFondo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:background="#83000000"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nombreLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:text="@string/Nombre"
                    android:textColor="@color/Blanco"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/descripcioLay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingTop="2dp"
                    android:text="@string/Desc"
                    android:textColor="@color/Blanco"
                    android:textSize="10sp"/>

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    style="?android:attr/ratingBarStyleSmall"
                    android:max="5"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="left"
                    android:stepSize="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingRight="5dp">

                <ImageView
                    android:id="@+id/pin"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/pin"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:id="@+id/distanciaTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/Distancia"
                    android:textColor="@color/Blanco"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
