<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/anuncio_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grisBotones"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:paddingRight="10sp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/anuncioNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20sp"
                    android:text="@string/Nombre"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="en"
                    android:textColor="@color/grisBotones"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/anuncioCat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/Deporte"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:paddingLeft="10dp">

                <TextView
                    android:id="@+id/anuncioTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="TITULO"
                    android:textColor="@color/Blanco"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/anuncioDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5sp"
                    android:text="@string/workana"
                    android:textColor="@color/Blanco"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10sp"
                    android:paddingTop="10sp">

                    <TextView
                        android:id="@+id/anuncioVisitas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20 Visitas"
                        android:textColor="@color/grisBotones"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/anuncioFecha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="25sp"
                        android:text="2 hrs"
                        android:textColor="@color/grisBotones"
                        android:textSize="10sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
