<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_scrollFlags="enterAlways"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/Lbasehorizontal"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:id="@+id/Lizquierda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="5"
                    android:background="@drawable/mark"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="110dp"
                        android:background="#83000000"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:paddingTop="2dp"
                                android:text="@string/Nombre"
                                android:textColor="@color/Blanco"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:paddingTop="2dp"
                                android:text="@string/Desc"
                                android:textColor="@color/Blanco"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="5dp"
                                android:paddingTop="2dp"
                                android:text="@string/Ciudad"
                                android:textColor="@color/Blanco"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="4"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/pin" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Distancia"
                                android:textColor="@color/Blanco"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Lderecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_weight="5"
                    android:background="@drawable/markito"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="110dp"
                        android:background="#83000000"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="2dp"
                                android:text="@string/Nombre"
                                android:textColor="@color/Blanco"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="2dp"
                                android:text="@string/Desc"
                                android:textColor="@color/Blanco"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="2dp"
                                android:text="@string/Ciudad"
                                android:textColor="@color/Blanco"
                                android:textSize="14sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="4"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/pin" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Distancia"
                                android:textColor="@color/Blanco"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>